Add service user & middleware response
