# cmd/gateway/docs/swagger.yaml
@@ -3,9 +3,9 @@ definitions:
     properties:
       email:
         type: string
-      id:
-        type: integer
       name:
+        type: string
+      password:
         type: string
     type: object
 info:
