# cmd/gateway/routes/user.go
@@ -5,9 +5,9 @@ import "github.com/gofiber/fiber/v2"
 
 // =================== Dummy User model untuk Swagger ===================
 type User struct {
-	ID    int64  `json:"id"`
 	Name  string `json:"name"`
 	Email string `json:"email"`
+	Password string `json:"password"`
 }
 
 // =================== Dummy Handlers untuk Swagger ===================
